<resources>
    <string name="app_name"
        xmlns:tools="http://schemas.android.com/tools"
        tools:override="true">Revised</string>
    <string name="application_name">Revised</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_second">Home Second</string>
    <string name="packages">Packages</string>
    <string name="subjects">Subjects</string>
    <string name="home">Home</string>
    <string name="study_material">Study Material</string>
    <string name="profile">Profile</string>

    <string name="subject_text"><u>SUBJECTS</u></string>

    <string name="packages_text"><u>PACKAGES</u></string>

    <string name="study_material_text"><u>STUDY MATERIAL</u></string>
    <string name="favorite">Favorite</string>
    <string name="booking">Booking</string>
    <string name="activities">Activities</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="resources">Resources</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="area">Area</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="select_location_manually">Select Location Manually</string>
    <string name="txt_continue">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="user_email_address">User Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_logged_in">Already Logged in?</string>
    <string name="please_double_click_to_exit">Please click BACK again to exit</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an Account?</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="tutors_near_you">Tutors Near You</string>
    <string name="featured_tutorials">Featured Tutorials</string>
    <string name="offers">Offers</string>
    <string name="super_tutors">Super Tutors</string>
    <string name="sample_text">Developer Text</string>
    <string name="discount_given">Discount Given</string>
    <string name="place">Place</string>
    <string name="edit">Edit</string>
    <string name="preferred_subjects">Preferred Subjects</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="select_class">Select Class</string>
    <string name="select_city">Select your City</string>
    <string name="select_loc">Select your Location</string>
    <string name="select_your_class">Select your Class</string>
    <string name="select_sub">Select your Subject</string>
    <string name="get_notes">Get Notes</string>
    <string name="click_here_to_download_your_notes">Click here to download your Notes..</string>
    <string name="address">Address</string>
    <string name="sample_address">C 2/42, Hindon Cut Canal Road, Block C, New Ashok Nagar, Noida, Uttar Pradesh 110096</string>
    <string name="experience">Experience</string>
    <string name="read_more_question">read more?</string>
    <string name="book_this_coaching">Book this Coaching</string>
    <string name="sample_tuition_intro">I am currently an ex-MOE school teacher providing full-time tuition service.
I taught Lower Sec Maths and Science, and O Level Biology for 1 year in Victoria Secondary School and Broadrick Secondary School (as a MOE trainee teacher).
I taught A Level Biology for 2 years in Serangoon Junior College (as a MOE teacher).
I taught Lower Sec Maths and Science, and O Level Biology for 1 year in Telok Kurau Secondary School (as a MOE teacher).
I taught Lower Sec Maths and Science, O level E Maths, A Maths, Physics, Chemistry, Biology and also Integrated Program Maths and Integrated Program Sciences for 8 years (as a full-time tutor).</string>
    <string name="msgMandatory">This field is mandatory</string>
    <string name="confirm_password_msg">Both password must be match</string>
    <string name="logout_message">Are you sure to logout</string>
    <string name="yes">Yes</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_topic">Select Topic</string>
    <string name="no_data_found">No data found</string>
    <string name="search">Search</string>
    <string name="empty" />
    <string name="findCoaching">Find Coaching Center</string>
    <string name="razor_pay_test_key">rzp_test_oS2MAcgMSAyAxN</string>
    <string name="background">background</string>
    <string name="popular_coaching">Popular Coaching</string>
    <string name="featured_coaching">Featured Coaching</string>
    <string name="super_coaching">Super Coaching</string>
    <string name="search_for_your_coaching_here">Search for your coaching here</string>
    <string name="about_teachers">About Teachers</string>
    <string name="about_institute">About Institute</string>
    <string name="live_classes">Live Classes</string>
    <string name="sample_name">Sample Name</string>
    <string name="youtube_links">Youtube Links</string>
    <string name="youtube_thumbnail">Youtube Thumbnail</string>
    <string name="give_us_rating">Give Us Rating</string>
    <string name="add_a_rating">Add a Rating</string>
    <string name="notification">Notification</string>
    <string name="sample_time_stamp">2020-08-25 12:48:00</string>
    <string name="book_this_class">Book this Class</string>
    <string name="sample_live_class">Interesting Live Class in Mathematics</string>
</resources>
