<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/booking"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/booking" />

        <item
            android:id="@+id/my_favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />

        <item
            android:id="@+id/privacy"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/term"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/terms_amp_conditions" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/resources"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/resources" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />

    </group>

</menu>
