<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tint_grey"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/default_image"
            android:contentDescription="@string/live_classes" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_live_class"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/doBookingButton"
                style="@style/rounded_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_this_class"
                android:textColor="@android:color/white"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
